--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Headliner</title>
+  <title>Whose Headline?</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
+  <!-- <link href='http://fonts.googleapis.com/css?family=Bevan' rel='stylesheet' type='text/css'> -->
+  <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
-<header>
-  <h2><%= link_to 'Headliner', root_path %></h2>
-
-  <p><%= link_to 'PLay new game', new_play_path %></p>
-
-  <div id="user_nav">
+<header class="container_12">
+  <div class="grid_6">
+    <h2>Whose Headline?</h2>
+    <p><%= link_to 'Play new game', new_play_path %></p>
+  </div>
+  <div class="grid_6" id="user_nav">
     <% if current_user %>
       Signed in as
-      @<%= current_user.nickname %> |
+      <%= link_to current_user.twitter_name, current_user %> |
       <%= link_to "Sign Out", signout_path %>
+      <br />
+      Total score
+      <%= current_user.plays.where(:won => true).count %> out of
+      <%= current_user.plays.count %>
     <% else %>
       <%= link_to "Sign in with Twitter", "/auth/twitter" %>
     <% end %>
   </div>
-
+  <div class="clearfix"></div>
 </header>
 
-<p id="notice"><%= notice %></p>
-
-
-<%= yield %>
+<div class="container_12" id="mainContent">
+  <% if notice %>
+    <div class="grid_12" id="notice"><%= notice %></div>
+  <% end %>
+  <%= yield %>
+  <div class="clearfix"></div>
+</div>
 
 </body>
 </html>
