BEtter background Added analytics

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,17 @@
   <!-- <link href='http://fonts.googleapis.com/css?family=Bevan' rel='stylesheet' type='text/css'> -->
   <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 </head>
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-22922584-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 <body>
 
 <header class="container_12">
@@ -33,7 +44,9 @@
 
 <div class="container_12" id="mainContent">
   <% if notice %>
-    <div class="grid_12" id="notice"><%= notice %></div>
+    <div class="grid_12">
+      <div id="notice"><%= notice %></div>
+    </div>
   <% end %>
   <%= yield %>
   <div class="clearfix"></div>
