--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -1,5 +1,13 @@
 <div class="grid_12">
-<h1>Sources</h1>
+
+<p>
+  <%= link_to 'Login with Twitter', "/auth/twitter" %>
+  and then guess of the following published the headline.
+</p>
+
+
+
+<h2>Sources</h2>
 
 <table>
   <tr>
